--- a/asterra-assignment-front/src/App.css
+++ b/asterra-assignment-front/src/App.css
@@ -1,38 +1,94 @@
-.App {
-  text-align: center;
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #222;
+  color: #eee;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  min-height: 100vh;
+}
+
+h1 {
+  margin-bottom: 10px;
+  color: #fff;
+}
+
+label {
+  font-weight: bold;
+  margin-right: 10px;
+}
+
+input,
+select {
+  margin-bottom: 10px;
+  padding: 10px;
+  width: 100%;
+  box-sizing: border-box;
+  background-color: #444;
+  color: #eee;
+  border: 1px solid #444;
+}
+
+input::placeholder {
+  color: #ccc;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+th,
+td {
+  border: 1px solid #666;
+  padding: 10px;
+}
+
+th {
+  background-color: #555;
+}
+
+button {
+  background-color: #4caf50;
   color: white;
+  padding: 8px 16px;
+  border: none;
+  cursor: pointer;
+  margin-right: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+button:hover {
+  background-color: #45a049;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* Responsive styles for mobile devices */
+@media (max-width: 768px) {
+  .container {
+    max-width: 100%;
+    padding: 10px;
   }
-  to {
-    transform: rotate(360deg);
+
+  input,
+  select {
+    font-size: 14px;
+    padding: 8px;
+  }
+
+  table {
+    font-size: 14px;
+  }
+
+  th,
+  td {
+    padding: 8px;
   }
 }
